--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
             </ul>
         </header>
         <div class="row mt-2">
-            <h1 class="text-center" id="title"></h1>
+            <h1 class="text-center" id="title">E-commerce</h1>
         </div>
     </div>
 </body>
